--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -56,7 +56,7 @@
 
 @mixin btn_order
     {
-        
+            padding-top: 5%;
             display: flex;
             justify-content: center;
             align-content: center;
